# find-a-home

./: .env.example  .gitignore  BACKLOG.md  Dockerfile  PLAN.md  PRICE_TRACKER_BRIEF.md  README.md  config.json  docker-compose.yml  onthemarket_recent_agents_e8_e9_e2_n1.csv  pyproject.toml
data/: agent_rental_listing_urls_e8_e9_n1_e2.csv  agents.csv
deploy/: deploy.sh  find-a-home-daily-report.service.example  find-a-home-daily-report.timer.example  find-a-home.crontab.example  find-a-home.service.example  magnet-grab-setup.sh  magnet-grab.service.example
magnet_grab/: .env.example  README.md  __init__.py  __main__.py  config.py  downloader.py  magnet.py  poller.py  server.py  telegram.py
rental_alert_bot/: __init__.py  agent_directory.py  browser.py  cli.py  config.py  extractor.py  health.py  http.py  matcher.py  models.py  notifiers.py  reports.py  runner.py  scheduler.py  store.py  supabase_export.py  text.py  tiers.py
supabase/: agent_directory_seed.sql  seed.sql
supabase/migrations/: 20260506120000_create_agent_sources.sql
tests/: test_agent_directory.py  test_config.py  test_extractor.py  test_magnet_grab.py  test_magnet_grab_poller.py  test_matcher.py  test_notifiers.py  test_reports.py  test_scheduler.py  test_store.py  test_supabase_export.py  test_text.py
