[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "find-a-home"
version = "0.1.0"
description = "Fast rental listing monitor with instant email alerts and Telegram health digests."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
find-a-home = "rental_alert_bot.cli:main"
rental-alert-bot = "rental_alert_bot.cli:main"

[tool.setuptools.packages.find]
include = ["rental_alert_bot*"]
